kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: politicni-portret
spec:
  selector:
    app: politicni-portret
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
