kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: politicni-portret
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - politicni-portret.djnd.si
        - politicni-portret.danesjenovdan.si
      secretName: politicni-portret-tls
  rules:
    - host: politicni-portret.djnd.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: politicni-portret
                port:
                  number: 80
    - host: politicni-portret.danesjenovdan.si
      http: *http_paths
